force-app/main/default/objects/cgcloud__Order_Item__c/cgcloud__Order_Item__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the order item object.</description>
    <label>Advanced Order Item</label>
    <nameField>
        <displayFormat>OI-{0000}</displayFormat>
        <label>Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advanced Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>