force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Base_Price__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Base_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores the Value of the item, specified in the  appropriate product condition.</description>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>