force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Base_Price_Receipt__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Base_Price_Receipt__c</fullName>
    <description>Basic product price in receipt currency.</description>
    <label>Base Price Receipt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>