force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Check_In_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_In_Reason_Code__c</fullName>
    <description>Allows specification of a reason if the checked in product quantity does not fit to the expected product quantity given via product inventory.</description>
    <label>Check In Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>Miscounting</fullName>
            </value>
            <value>
                <fullName>NoDoc</fullName>
            </value>
            <value>
                <fullName>Misc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>