force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Consumer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consumer_Quantity__c</fullName>
    <description>The ordered quantity expressed in consumer quantity units</description>
    <label>Consumer Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>