force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Discount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Manual discount given by the user.</description>
    <label>Discount</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>