force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Erp_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Erp_Id__c</fullName>
    <description>Id of this order entry for the ERP system.</description>
    <label>Erp Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>