force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Free_Item_Creation_Step__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Free_Item_Creation_Step__c</fullName>
    <description>Holds a reference to the step which generates the free item</description>
    <label>Free Item Creation Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>