force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Gross_Value_Receipt__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Gross_Value_Receipt__c</fullName>
    <description>Gross value in receipt currency.</description>
    <label>Gross Value Receipt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>