force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__History__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The item, which has been added to the disposal list, has been ordered in a former sales document. (The item belongs to a former sales document of the same business partner and of the same sales document template.)</description>
    <label>History</label>
    <type>Checkbox</type>
</CustomField>