force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Left_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Left_Quantity__c</fullName>
    <description>Item quantity left on the truck after product check in</description>
    <label>Left Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>