force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Listed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True, if product exists in an authorization list of the orderer.</description>
    <label>Listed</label>
    <type>Checkbox</type>
</CustomField>