force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Modification_Reason__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Modification_Reason__c</fullName>
    <description>Specifies a reason if preordered product quantity has been modified on mobility device.</description>
    <inlineHelpText>Attribute at present not used.</inlineHelpText>
    <label>Modification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>More</fullName>
            </value>
            <value>
                <fullName>Less</fullName>
            </value>
            <value>
                <fullName>WrongPrd</fullName>
            </value>
            <value>
                <fullName>IncOrder</fullName>
            </value>
            <value>
                <fullName>DmgByDriver</fullName>
            </value>
            <value>
                <fullName>Nopayment</fullName>
            </value>
            <value>
                <fullName>TMStock</fullName>
            </value>
            <value>
                <fullName>WrDel</fullName>
            </value>
            <value>
                <fullName>FGReturn</fullName>
            </value>
            <value>
                <fullName>BadPrd</fullName>
            </value>
            <value>
                <fullName>OutTrStock</fullName>
            </value>
            <value>
                <fullName>TckTransfer</fullName>
            </value>
            <value>
                <fullName>MissCount</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>CpFailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>