force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order__c</fullName>
    <description>ID of the order where Order Item is associated with</description>
    <label>Order</label>
    <referenceTo>cgcloud__Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>