force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Order_Item_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Item_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the order item template where order item is associated with</description>
    <label>Order Item Template</label>
    <referenceTo>cgcloud__Order_Item_Template__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>