force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Out_Of_Stock__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Out_Of_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the product is out of stock.</description>
    <label>Out Of Stock</label>
    <type>Checkbox</type>
</CustomField>