force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Parent_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to a parent order item (e.g. in case of free item: the ordered item that caused the free item). Used in complex pricing on mobility devices.</description>
    <label>Parent_Order_Item</label>
    <referenceTo>cgcloud__Order_Item__c</referenceTo>
    <relationshipLabel>Parent Order Items</relationshipLabel>
    <relationshipName>Parent_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>