force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Type__c</fullName>
    <description>Defines the to which parent the free item is related. Can be related to a order item then Parent_Order_Item is filled and the type is order. If free item is related to Order header type is &quot;Order&quot;.</description>
    <label>Parent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Reward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>