force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Price__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price__c</fullName>
    <description>Calculated price of the item in the domestic currency.</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>