force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Price_Receipt__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_Receipt__c</fullName>
    <description>Calculated price of the item in the receipt/document currency.</description>
    <label>Price Receipt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>