force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Pricing_Info_5__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Info_5__c</fullName>
    <label>Pricing Info 5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>