force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Promoted__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promoted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a promotion exists in the relevant period.</description>
    <label>Promoted</label>
    <type>Checkbox</type>
</CustomField>