force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to promotion if the product of the item originates from a selectable promotion</description>
    <label>Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>