force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Promotion_Reward__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to the reward if order item was granted by a reward.</description>
    <label>Promotion Reward</label>
    <referenceTo>cgcloud__Promotion_Reward__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>