force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantity for this product.</description>
    <label>Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>