force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Special_Price__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Special_Price__c</fullName>
    <description>The attribute specifies a reduced price for an item that is used for the item value calculation if specified. The attribute can only be edited, if the sales document item template allows the consideration of the special price.</description>
    <label>Special Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>