force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Suggested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Suggested_Quantity__c</fullName>
    <description>The value contains the suggested order quantity that has been calculated via algorithm or that is given by a relevant promotion.</description>
    <label>Suggested Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>