force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Target_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target_Quantity__c</fullName>
    <description>Product checkout quantity for the tour in question as given by the HOST interface.</description>
    <label>Target Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>