force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__UoM__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UoM__c</fullName>
    <description>Stands for &apos;Unit Of Measure&apos;</description>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ConsumerUnit</fullName>
            </value>
            <value>
                <fullName>SalesUnit</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Layer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>