force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Value_Receipt__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Value_Receipt__c</fullName>
    <description>Calculated value of the item in the receipt/document currency.</description>
    <label>Value Receipt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>