force-app/main/default/objects/cgcloud__Order_Item__c/fields/cgcloud__Voided__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Voided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This attribute indicates if a disposal list item is voided.</description>
    <label>Voided</label>
    <type>Checkbox</type>
</CustomField>