force-app/main/default/objects/cgcloud__Order_Item__c/validationRules/cgcloud__Quantity_Length_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Quantity_Length_Check</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Quantity__c  &gt;  9999</errorConditionFormula>
    <errorMessage>Quantity should not be more than 9999.</errorMessage>
</ValidationRule>